default/oauth/service.yml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  ports:
    - port: 4180
      targetPort: web
      name: web
  selector:
    app: oauth
