default/oauth/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: auth-ingress
  labels:
    app.kubernetes.io/name: auth-ingress
    app.kubernetes.io/part-of: auth
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
    - host: "auth.tristan.moe"
      http:
        paths:
          - backend:
              serviceName: oauth
              servicePort: 4180
  tls:
    - hosts:
        - "auth.tristan.moe"
      secretName: letsencrypt-cert-oauth.tristan.moe
